Try to fix the problem with the scrollbar
The page shows a scrollbar even if only 100% of viewport height is used.

--- a/css/styles.css
+++ b/css/styles.css
@@ -45,8 +45,12 @@ html {
 
 .welcome__text {
     color: var(--white);
-    margin: 0;
-    padding-top: 5rem;
-    size: 1rem;
+    margin: unset;
+    padding-top: 15rem;
+    text-align: center;
+}
+
+.welcome__sub-text {
+    color: var(--white);
     text-align: center;
 }
